--- a/index.html
+++ b/index.html
@@ -76,18 +76,31 @@
     <section class="blocks">
         <span class="article-sizing"><article>
             <h2>Guest Lectures at F&C</h2>
-            <p>Aside from hosting Monday evenings at 14 Palmers Road, I’d also like to host the space for 60-90 minutes on
-            Wednesday evenings for guest speakers to come in.
+            <p>Aside from hosting Monday evenings at 14 Palmers Road, <span class="imptext">I’d also like to host the space for 60-90 minutes on
+            Wednesday evenings for guest speakers to come in</span>.
             <br><br>
-            These tutorials will be a chance for anyone in London to receive focused instruction about the week’s
+            These sessions will be <span class="imptext">a chance for anyone in London to receive focused instruction</span> about the week’s
             featured subject. Example tutorial titles might include: “Recursion in JavaScript”, “Designing Responsive Page Layouts”, “Setting up your Coding Environment
             to Maximise Productivity” and “Animation with CSS”.
             <br><br>
-            I hope to make Wednesdays into something very meaningful for our local community.</p>
+            I hope to make Wednesdays into something very <span class="imptext">meaningful for our local community</span>.</p>
         </article></span>
 
         <span class="article-sizing"><article>
             <h2>Tutoring</h2>
+            <p> I have a particular passion for teaching and have already begun free tutoring sessions for
+            two kids here in London who need help with their schoolwork. I’m very skilled and experienced at teaching STEM topics,
+            and am also perfectly fluent in French and German. These are therefore the subjects that I enjoy
+            offering to those children who struggle in school and could use a helping hand. I plan on
+            continuing my tutoring well into 2017 and beyond.
+            <br><br>
+            I have also spoken to other applicants about bringing outdoor-skills education to Londoners.
+            This is a very popular topic in Canada (where I’m from) and I’d like to disperse
+            outdoors-education to interested community members here in London by organising camping
+            trips. I’ve led such trips for over 6 years as I’ve worked extensively in the outdoor
+            education and summer camping industries in Canada.
+
+            </p>
         </article></span>
 
         <span class="article-sizing"><article>
