--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="manifest" href="./favicon/manifest.json">
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    <script src="js/app.js"></script>
 </head>
 
     <nav>
@@ -74,7 +75,7 @@
             </ul>
         </article></span>
 
-        <span style="align-self: center; flex: 1 1"><img src="img/Alaska6.jpg" alt="Colin in Alaska"></span>
+        <span style="align-self: center; flex: 1 1"><img src="img/Alaska6.jpg" onmouseover="this.src='img/Flip2.png'" onmouseout="this.src='img/Alaska6.jpg'" alt="Colin in Alaska"></span>
     </section>
 
     <section class="subtitle" id="community">
